--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>Assignment # 2</title>
+    <a href="./Osama.html">Assignment1</a>
 </head>
 <h1>The Story in the book</h1>
 <hr>
