--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 
 <head>
     <title>Assignment # 2</title>
-    <a href="./Osama.html" style="text-decoration: none; color: aliceblue;">Assignment1</a>
+    <a href="./Osama.html" style="text-decoration: none; color: red;">Assignment1</a>
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <h1>The Story in the book</h1>
 <hr>
