--- a/Osama.html
+++ b/Osama.html
@@ -1,6 +1,10 @@
 
 <!-- saved from url=(0051)file:///C:/Users/Osaka%20Computers/Desktop/Osa.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></head><body>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+        <body>
 <h1> Unordered List </h1>
 <ul>
 <li> Chocolates </li>
