--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <a href="./Osama.html" style="text-decoration: none; color: red;">Assignment1</a>
     <a href="./tables.html">Tables</a>
     <link rel="stylesheet" href="style.css">
+    <a href="./Tables (2).html">Table2</a>
+    <a href="./for.html">Form</a>
+    <a href="./Assing.html">Assing</a>
+    <a href="./Assingment 07.html">Assingment7</a>
+    <a href="./assinment 08.html">Assignment8</a>
 
 </head>
 <h1>The Story in the book</h1>
