--- a/Tables (2).html
+++ b/Tables (2).html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Cv</title>
+    <title>Table </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
