--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Assignment # 2</title>
-    <a href="./Osama.html" style="text-decoration: none; color: red;">Assignment1</a>
+    <a href="./Osama.html" style="text-align: center;"">Assignment1</a>
     <a href="./tables.html">Tables</a>
     <link rel="stylesheet" href="style.css">
     <a href="./Tables (2).html">Table2</a>
