--- a/for.html
+++ b/for.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!--<table border="1">
+    <table border="1">
         <tr>
             <th colspan="2">Registration Form</th>
         </tr>
@@ -57,7 +57,7 @@
             <td> <input type="submit" value="Submit"></td>
             
         </tr>
-    </table>-->
+    </table>
     <br>
     <br>
     <!DOCTYPE html>
@@ -95,6 +95,8 @@
         <P>Password (6-8 characters): <input type="password"></P>
         <p>Verify password: <input type="password"></p>
         <P> <input type="submit" name="Send" value="Send"> <input type="submit" name="Clear" value="Clear"></P>-->
+     <br>
+     <br>
      <fieldset>
             <legend>Login Details</legend>
             <label>Name <input type="text"></label><br> <br>
