--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Assignment # 2</title>
-    <a href="./Osama.html" style="text-align: center;"">Assignment1</a>
+    <a href="./Osama.html" style="text-align: center;">Assignment1</a>
     <a href="./tables.html">Tables</a>
     <link rel="stylesheet" href="style.css">
     <a href="./Tables (2).html">Table2</a>
@@ -12,6 +12,9 @@
     <a href="./assinment 08.html">Assignment8</a>
 
 </head>
+<body background="">
+    
+
 <h1>The Story in the book</h1>
 <hr>
 <h2>Chapter 1</h2>
@@ -29,5 +32,5 @@
     of the Ilama <abbr title="Deoxyribonucleic acid">DNA</abbr>,to be an outstanding achievement, Molly
     <em>did</em> think she had something better to do.
 </p>
-
+</body>
 </html>
