--- a/for.html
+++ b/for.html
@@ -97,13 +97,13 @@
         <P> <input type="submit" name="Send" value="Send"> <input type="submit" name="Clear" value="Clear"></P>-->
      <br>
      <br>
-     <fieldset>
+     <fieldset style="border: 5px;color: purple;">
             <legend>Login Details</legend>
             <label>Name <input type="text"></label><br> <br>
             <label>Email: <input type="text" name="email"></label><br> <br>
             <label>Password: <input type="password"></label>
         </fieldset> <br>
-        <fieldset>
+        <fieldset style="border: 5px;color: red;" >
             <legend>Your Feedback</legend>
             <label>Please check all the emotions that apply to you:</label> <br>
           <label>  <input type="checkbox" name="Mood" value="Angry">Angry </label><br>
